tests/ui/compound-index-unsupported.stderr
error: Unsupported index type: blah
 --> tests/./ui/compound-index-unsupported.rs:8:27
  |
8 |     #[cipherstash(query = "blah", compound = "email#name")]
  |                           ^^^^^^
